--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     </header>
     <section id="results"></section>
     <section id="main-container">
-      <div id="img-container"></div>
+      <div id="img-container">
+        <img id="img1" />
+        <img id="img2" />
+        <img id="img3" />
+      </div>
       <div id="lorem-container"></div>
     </section>
     <footer></footer>
